--- a/charts/front-end/templates/service.yaml
+++ b/charts/front-end/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "front-end.fullname" . }}
-  labels:
-    {{- include "front-end.labels" . | nindent 4 }}
+  name: {{ .Values.appName }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+  type: {{ .Values.serviceType }}
   selector:
-    {{- include "front-end.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.appName }}
+  ports:
+  - name: {{ .Values.portName }}
+    port: {{ .Values.servicePort }}
+    targetPort: {{ .Values.targetPort }}
