--- a/charts/front-end/templates/tests/test-connection.yaml
+++ b/charts/front-end/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "front-end.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "front-end.fullname" . }}:{{ .Values.servicePort }}']
   restartPolicy: Never
