Added fargate label

--- a/charts/front-end/templates/deployment.yaml
+++ b/charts/front-end/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app: {{ .Values.appName }}
+        env: serverless
       namespace: {{ .Values.namespace }}
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
