--- a/charts/online-shopping/values/emailservice-value.yaml
+++ b/charts/online-shopping/values/emailservice-value.yaml
@@ -11,6 +11,7 @@ containerEnvVariables:
   value: "1"
 - name: DISABLE_PROFILER
   value: "1"
+namespace: microservices-development
 serviceAccountName: default
 portName: grpc
 
