--- a/charts/online-shopping/templates/deployment.yaml
+++ b/charts/online-shopping/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         app: {{ .Values.appName }}
+        env: serverless
       namespace: {{ .Values.namespace }}
     spec:
       serviceAccountName: {{ .Values.serviceAccountName }}
