--- a/charts/online-shopping/values/checkoutservice-value.yaml
+++ b/charts/online-shopping/values/checkoutservice-value.yaml
@@ -25,6 +25,7 @@ containerEnvVariables:
   value: "1"
 - name: DISABLE_PROFILER
   value: "1"
+namespace: microservices-development
 serviceAccountName: default
 portName: grpc
 
