--- a/charts/online-shopping/values/currencyservice-value.yaml
+++ b/charts/online-shopping/values/currencyservice-value.yaml
@@ -2,7 +2,7 @@
 appName: currencyservice
 appImage: gcr.io/google-samples/microservices-demo
 appReplicas: 1
-appVersion: v0.4.1
+#appVersion: v0.4.1
 containerPort: 7000
 containerEnvVariables:
 - name: PORT
