--- a/charts/online-shopping/values/shippingservice-value.yaml
+++ b/charts/online-shopping/values/shippingservice-value.yaml
@@ -2,7 +2,7 @@
 appName: shippingservice
 appImage: gcr.io/google-samples/microservices-demo
 appReplicas: 1
-appVersion: v0.4.1
+#appVersion: v0.4.1
 containerPort: 50051
 containerEnvVariables:
 - name: PORT
