--- a/infrastructure/clusters/eks/cluster.yaml
+++ b/infrastructure/clusters/eks/cluster.yaml
@@ -8,19 +8,20 @@ metadata:
 vpc:
   subnets:
     private:
-      eu-west-1a: { id: }
-      eu-west-1b: { id: }
-      eu-west-1c: { id: }
+      eu-west-1a: { id: subnet-0463a2c98865d50f0 }
+      eu-west-1b: { id: subnet-0dd1e8399da23aeef }
+      eu-west-1c: { id: subnet-04da2a26f6679973b }
 
+
+nodeGroups:
+  - name: nodegroup-worker1
+    labels: { role: workers }
+    instanceType: t3.large
+    desiredCapacity: 2
+    privateNetworking: true
+
+   
 fargateProfiles:
-  - name: fargate-default
-    selectors:
-      # All workloads in the "default" Kubernetes namespace will be
-      # scheduled onto Fargate:
-      - namespace: default
-      # All workloads in the "kube-system" Kubernetes namespace will be
-      # scheduled onto Fargate:
-      - namespace: kube-system
   - name: microservices
     selectors:
       # All workloads in the "microservices-*" Kubernetes namespace matching the following
@@ -28,4 +29,3 @@ fargateProfiles:
       - namespace: microservices-*
         labels:
           env: serverless
-          checks: passed
