--- a/ansible/deploy-docker.yaml
+++ b/ansible/deploy-docker.yaml
@@ -2,13 +2,18 @@
 - name: Install Python3 and Docker
   hosts: docker_server
   become: yes
+  gather_facts: False
   tasks:
     - name: Install Python3
+      vars:
+        ansible_python_interpreter: /usr/bin/python
       yum:
         name: python3
         update_cache: yes
         state: present
     - name: Install Docker
+      vars:
+        ansible_python_interpreter: /usr/bin/python
       yum:
         name: docker
         update_cache: yes
@@ -23,3 +28,43 @@
         url: https://github.com/docker/compose/releases/download/v2.12.2/docker-compose-linux-{{lookup('pipe', 'uname -m')}}
         dest: /usr/local/bin/docker-compose
         mode: +x
+
+- name: Start and Enable Docker
+  hosts: docker_server
+  become: yes
+  tasks:
+    - name: Start Docker
+      systemd:
+        name: docker
+        state: started
+    - name: Enable Docker
+      systemd:
+        name: docker
+        state: enabled
+
+    # Install docker for python module for Amazon ec2
+    - name: Install python module
+      pip:
+        name: 
+          - docker
+          - docker-compose
+
+- name: Create docker user
+  hosts: docker_server
+  become: yes
+  tasks:
+    - name: Create new docker user
+      user:
+        name: docker-user
+        groups: {{docker_groups}}
+        append: yes
+    - name: Recconnect to docker_server
+      meta: reset_connection
+
+- name: Test docker
+  hosts: docker_server
+  tasks:
+    - name: Pull redis
+      community.docker.docker_image:
+        name: redis
+        source: pull
