navigate to productcatalogservice

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build and push
+        run: |
+          echo Navigate to ProductCatalog Directory
+          cd src/productcatalogservice
         uses: docker/build-push-action@v3
         with:
           context: .
