Added full path to copy

--- a/src/productcatalogservice/Dockerfile
+++ b/src/productcatalogservice/Dockerfile
@@ -19,9 +19,7 @@ RUN apk add build-base
 WORKDIR /src/productcatalogservice
 # restore dependencies
 COPY go.sum ./
-
-WORKDIR /src/productcatalogservice
-COPY go.mod ./
+COPY /src/productcatalogservice/go.mod ./
 
 RUN go mod download
 COPY . .
