--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: /src/productcatalogservice/
-          file: Dockerfile
+          context: ./src
+          file: src/productcatalogservice/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USER }}/productcatalog:latest
