--- a/src/productcatalogservice/Dockerfile
+++ b/src/productcatalogservice/Dockerfile
@@ -18,7 +18,9 @@ RUN apk add build-base
 
 WORKDIR /src
 # restore dependencies
-COPY go.mod go.sum ./
+COPY /src/productcatalogservice/go.sum ./
+COPY /src/productcatalogservice/go.mod ./
+
 RUN go mod download
 COPY . .
 
@@ -31,7 +33,7 @@ RUN apk add --no-cache ca-certificates
 
 WORKDIR /src
 COPY --from=builder /productcatalogservice ./server
-COPY products.json .
+COPY src/productcatalogservice/products.json .
 
 # Definition of this variable is used by 'skaffold debug' to identify a golang binary.
 # Default behavior - a failure prints a stack trace for the current goroutine.
