--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Print Working Directory 
+        run: |
+          pwd 
+          echo `pwd`
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
