--- a/src/productcatalogservice/Dockerfile
+++ b/src/productcatalogservice/Dockerfile
@@ -16,10 +16,10 @@ FROM golang:1.19.4-alpine@sha256:f33331e12ca70192c0dbab2d0a74a52e1dd344221507d88
 RUN apk add --no-cache ca-certificates git
 RUN apk add build-base
 
-WORKDIR /src
+WORKDIR /microservices/src/productcatalogservice
 # restore dependencies
-COPY productcatalogservice/go.sum ./
-COPY productcatalogservice/go.mod ./
+COPY go.sum ./
+COPY go.mod ./
 
 RUN go mod download
 COPY . .
@@ -31,7 +31,7 @@ RUN go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -o /productcatalogservice .
 FROM alpine:3.17.0@sha256:8914eb54f968791faf6a8638949e480fef81e697984fba772b3976835194c6d4 AS without-grpc-health-probe-bin
 RUN apk add --no-cache ca-certificates
 
-WORKDIR /src
+WORKDIR /microservices/src
 COPY --from=builder /productcatalogservice ./server
 COPY productcatalogservice/products.json .
 
