--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,4 @@ jobs:
           context: ./src/productcatalogservice
           file: src/productcatalogservice/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USER }}/productcatalog:latest
+          tags: ${{ secrets.DOCKER_USER }}/productcatalogservice:latest
