--- a/.github/workflows/frontendbuild.yml
+++ b/.github/workflows/frontendbuild.yml
@@ -24,14 +24,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Print Working Directory 
-        run: |
-          pwd 
-
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./src/productcatalogservice
-          file: src/productcatalogservice/Dockerfile
+          context: ./src/frontend
+          file: src/frontend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USER }}/productcatalogservice:latest
+          tags: ${{ secrets.DOCKER_USER }}/frontend:latest
