--- a/.github/workflows/productcatalogbuild.yml
+++ b/.github/workflows/productcatalogbuild.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 jobs:
-  build:
+  build-docker-image:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
